--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "recharts": "2.4.3",
     "stylis": "4.1.3",
     "stylis-plugin-rtl": "2.1.1",
+    "yarn": "^1.22.22",
     "yup": "1.0.1"
   },
   "devDependencies": {
